switch to using key and text for questionOptions, use country codes, translate countries
