# utils/api/definitions/countries.ts
@@ -1,203 +1,200 @@
 interface CountryConfig {
-  country: string
+  code: string
   agreement: boolean
 }
 
 export const countryList: CountryConfig[] = [
-  { country: 'Canada', agreement: true },
-  { country: 'Agreement', agreement: true },
-  { country: 'Afghanistan', agreement: false },
-  { country: 'Albania', agreement: false },
-  { country: 'Algeria', agreement: false },
-  { country: 'Andorra', agreement: false },
-  { country: 'Angola', agreement: false },
-  { country: 'Antigua and Barbuda', agreement: true },
-  { country: 'Argentina', agreement: false },
-  { country: 'Armenia', agreement: false },
-  { country: 'Australia', agreement: false },
-  { country: 'Austria', agreement: true },
-  { country: 'Azerbaijan', agreement: false },
-  { country: 'Bahamas', agreement: false },
-  { country: 'Bahrain', agreement: false },
-  { country: 'Bangladesh', agreement: false },
-  { country: 'Barbados', agreement: true },
-  { country: 'Belarus', agreement: false },
-  { country: 'Belgium', agreement: true },
-  { country: 'Belize', agreement: false },
-  { country: 'Benin', agreement: false },
-  { country: 'Bhutan', agreement: false },
-  { country: 'Bolivia', agreement: false },
-  { country: 'Bosnia and Herzegovina', agreement: false },
-  { country: 'Botswana', agreement: false },
-  { country: 'Brazil', agreement: true },
-  { country: 'Brunei', agreement: false },
-  { country: 'Bulgaria', agreement: true },
-  { country: 'Burkina Faso', agreement: false },
-  { country: 'Burundi', agreement: false },
-  { country: 'Cabo Verde', agreement: false },
-  { country: 'Cambodia', agreement: false },
-  { country: 'Cameroon', agreement: false },
-  { country: 'Central African Republic', agreement: false },
-  { country: 'Chad', agreement: false },
-  { country: 'Chile', agreement: true },
-  { country: 'China', agreement: true },
-  { country: 'Colombia', agreement: false },
-  { country: 'Comoros', agreement: false },
-  { country: 'Congo (Congo-Brazzaville)', agreement: false },
-  { country: 'Costa Rica', agreement: false },
-  { country: "Côte d'Ivoire", agreement: false },
-  { country: 'Croatia', agreement: true },
-  { country: 'Cuba', agreement: false },
-  { country: 'Cyprus', agreement: true },
-  { country: 'Czechia (Czech Republic)', agreement: true },
-  { country: 'Democratic Republic of the Congo', agreement: false },
-  { country: 'Denmark', agreement: true },
-  { country: 'Djibouti', agreement: false },
-  { country: 'Dominica', agreement: true },
-  { country: 'Dominican Republic', agreement: false },
-  { country: 'Ecuador', agreement: false },
-  { country: 'Egypt', agreement: false },
-  { country: 'El Salvador', agreement: false },
-  { country: 'Equatorial Guinea', agreement: false },
-  { country: 'Eritrea', agreement: false },
-  { country: 'Estonia', agreement: true },
-  { country: 'Eswatini (fmr. "Swaziland")', agreement: false },
-  { country: 'Ethiopia', agreement: false },
-  { country: 'Fiji', agreement: false },
-  { country: 'Finland', agreement: true },
-  { country: 'France', agreement: true },
-  { country: 'Gabon', agreement: false },
-  { country: 'Gambia', agreement: false },
-  { country: 'Georgia', agreement: false },
-  { country: 'Germany', agreement: true },
-  { country: 'Ghana', agreement: false },
-  { country: 'Greece', agreement: true },
-  { country: 'Grenada', agreement: true },
-  { country: 'Guatemala', agreement: false },
-  { country: 'Guinea', agreement: false },
-  { country: 'Guinea-Bissau', agreement: false },
-  { country: 'Guyana', agreement: false },
-  { country: 'Haiti', agreement: false },
-  { country: 'Holy See', agreement: false },
-  { country: 'Honduras', agreement: false },
-  { country: 'Hungary', agreement: true },
-  { country: 'Iceland', agreement: true },
-  { country: 'India', agreement: true },
-  { country: 'Indonesia', agreement: false },
-  { country: 'Iran', agreement: false },
-  { country: 'Iraq', agreement: false },
-  { country: 'Ireland', agreement: true },
-  { country: 'Israel', agreement: true },
-  { country: 'Italy', agreement: true },
-  { country: 'Jamaica', agreement: true },
-  { country: 'Japan', agreement: true },
-  { country: 'Jordan', agreement: false },
-  { country: 'Kazakhstan', agreement: false },
-  { country: 'Kenya', agreement: false },
-  { country: 'Kiribati', agreement: false },
-  { country: 'Kuwait', agreement: false },
-  { country: 'Kyrgyzstan', agreement: false },
-  { country: 'Laos', agreement: false },
-  { country: 'Latvia', agreement: true },
-  { country: 'Lebanon', agreement: false },
-  { country: 'Lesotho', agreement: false },
-  { country: 'Liberia', agreement: false },
-  { country: 'Libya', agreement: false },
-  { country: 'Liechtenstein', agreement: false },
-  { country: 'Lithuania', agreement: true },
-  { country: 'Luxembourg', agreement: true },
-  { country: 'Madagascar', agreement: false },
-  { country: 'Malawi', agreement: false },
-  { country: 'Malaysia', agreement: false },
-  { country: 'Maldives', agreement: false },
-  { country: 'Mali', agreement: false },
-  { country: 'Malta', agreement: true },
-  { country: 'Marshall Islands', agreement: false },
-  { country: 'Mauritania', agreement: false },
-  { country: 'Mauritius', agreement: false },
-  { country: 'Mexico', agreement: true },
-  { country: 'Micronesia', agreement: false },
-  { country: 'Moldova', agreement: false },
-  { country: 'Monaco', agreement: false },
-  { country: 'Mongolia', agreement: false },
-  { country: 'Montenegro', agreement: false },
-  { country: 'Morocco', agreement: true },
-  { country: 'Mozambique', agreement: false },
-  { country: 'Myanmar (formerly Burma)', agreement: false },
-  { country: 'Namibia', agreement: false },
-  { country: 'Nauru', agreement: false },
-  { country: 'Nepal', agreement: false },
-  { country: 'Netherlands', agreement: true },
-  { country: 'New Zealand', agreement: false },
-  { country: 'Nicaragua', agreement: false },
-  { country: 'Niger', agreement: false },
-  { country: 'Nigeria', agreement: false },
-  { country: 'North Korea', agreement: false },
-  { country: 'North Macedonia', agreement: false },
-  { country: 'Norway', agreement: true },
-  { country: 'Oman', agreement: false },
-  { country: 'Pakistan', agreement: false },
-  { country: 'Palau', agreement: false },
-  { country: 'Palestine State', agreement: false },
-  { country: 'Panama', agreement: false },
-  { country: 'Papua New Guinea', agreement: false },
-  { country: 'Paraguay', agreement: false },
-  { country: 'Peru', agreement: true },
-  { country: 'Philippines', agreement: true },
-  { country: 'Poland', agreement: true },
-  { country: 'Portugal', agreement: true },
-  { country: 'Qatar', agreement: false },
-  { country: 'Romania', agreement: true },
-  { country: 'Russia', agreement: false },
-  { country: 'Rwanda', agreement: false },
-  { country: 'Saint Kitts and Nevis', agreement: true },
-  { country: 'Saint Lucia', agreement: true },
-  { country: 'Saint Vincent and the Grenadines', agreement: true },
-  { country: 'Samoa', agreement: false },
-  { country: 'San Marino', agreement: false },
-  { country: 'Sao Tome and Principe', agreement: false },
-  { country: 'Saudi Arabia', agreement: false },
-  { country: 'Senegal', agreement: false },
-  { country: 'Serbia', agreement: true },
-  { country: 'Seychelles', agreement: false },
-  { country: 'Sierra Leone', agreement: false },
-  { country: 'Singapore', agreement: false },
-  { country: 'Slovakia', agreement: true },
-  { country: 'Slovenia', agreement: true },
-  { country: 'Solomon Islands', agreement: false },
-  { country: 'Somalia', agreement: false },
-  { country: 'South Africa', agreement: false },
-  { country: 'South Korea', agreement: true },
-  { country: 'South Sudan', agreement: false },
-  { country: 'Spain', agreement: true },
-  { country: 'Sri Lanka', agreement: false },
-  { country: 'Sudan', agreement: false },
-  { country: 'Suriname', agreement: false },
-  { country: 'Sweden', agreement: true },
-  { country: 'Switzerland', agreement: true },
-  { country: 'Syria', agreement: false },
-  { country: 'Tajikistan', agreement: false },
-  { country: 'Tanzania', agreement: false },
-  { country: 'Thailand', agreement: false },
-  { country: 'Timor-Leste', agreement: false },
-  { country: 'Togo', agreement: false },
-  { country: 'Tonga', agreement: false },
-  { country: 'Trinidad and Tobago', agreement: true },
-  { country: 'Tunisia', agreement: false },
-  { country: 'Turkey', agreement: true },
-  { country: 'Turkmenistan', agreement: false },
-  { country: 'Tuvalu', agreement: false },
-  { country: 'Uganda', agreement: false },
-  { country: 'Ukraine', agreement: false },
-  { country: 'United Arab Emirates', agreement: false },
-  { country: 'United Kingdom', agreement: true },
-  { country: 'United States of America', agreement: true },
-  { country: 'Uruguay', agreement: true },
-  { country: 'Uzbekistan', agreement: false },
-  { country: 'Vanuatu', agreement: false },
-  { country: 'Venezuela', agreement: false },
-  { country: 'Vietnam', agreement: false },
-  { country: 'Yemen', agreement: false },
-  { country: 'Zambia', agreement: false },
-  { country: 'Zimbabwe', agreement: false },
+  { code: 'CAN', agreement: true },
+  { code: 'AGREEMENT', agreement: true },
+  { code: 'AFG', agreement: false },
+  { code: 'ALB', agreement: false },
+  { code: 'DZA', agreement: false },
+  { code: 'AND', agreement: false },
+  { code: 'AGO', agreement: false },
+  { code: 'ATG', agreement: true },
+  { code: 'ARG', agreement: false },
+  { code: 'ARM', agreement: false },
+  { code: 'AUS', agreement: false },
+  { code: 'AUT', agreement: true },
+  { code: 'AZE', agreement: false },
+  { code: 'BHS', agreement: false },
+  { code: 'BHR', agreement: false },
+  { code: 'BGD', agreement: false },
+  { code: 'BRB', agreement: true },
+  { code: 'BLR', agreement: false },
+  { code: 'BEL', agreement: true },
+  { code: 'BLZ', agreement: false },
+  { code: 'BEN', agreement: false },
+  { code: 'BTN', agreement: false },
+
+  { code: 'BIH', agreement: false },
+  { code: 'BWA', agreement: false },
+  { code: 'BRA', agreement: true },
+
+  { code: 'BGR', agreement: true },
+  { code: 'BFA', agreement: false },
+  { code: 'BDI', agreement: false },
+  { code: 'CPV', agreement: false },
+  { code: 'KHM', agreement: false },
+  { code: 'CMR', agreement: false },
+  { code: 'CAF', agreement: false },
+  { code: 'TCD', agreement: false },
+  { code: 'CHL', agreement: true },
+  { code: 'CHN', agreement: true },
+  { code: 'COL', agreement: false },
+  { code: 'COM', agreement: false },
+
+  { code: 'CRI', agreement: false },
+  { code: 'CIV', agreement: false },
+  { code: 'HRV', agreement: true },
+  { code: 'CUB', agreement: false },
+  { code: 'CYP', agreement: true },
+
+  { code: 'DNK', agreement: true },
+  { code: 'DJI', agreement: false },
+  { code: 'DMA', agreement: true },
+  { code: 'DOM', agreement: false },
+  { code: 'ECU', agreement: false },
+  { code: 'EGY', agreement: false },
+  { code: 'SLV', agreement: false },
+  { code: 'GNQ', agreement: false },
+  { code: 'ERI', agreement: false },
+  { code: 'EST', agreement: true },
+
+  { code: 'ETH', agreement: false },
+  { code: 'FJI', agreement: false },
+  { code: 'FIN', agreement: true },
+  { code: 'FRA', agreement: true },
+  { code: 'GAB', agreement: false },
+  { code: 'GMB', agreement: false },
+  { code: 'GEO', agreement: false },
+  { code: 'DEU', agreement: true },
+  { code: 'GHA', agreement: false },
+  { code: 'GRC', agreement: true },
+  { code: 'GRD', agreement: true },
+  { code: 'GTM', agreement: false },
+  { code: 'GIN', agreement: false },
+  { code: 'GNB', agreement: false },
+  { code: 'GUY', agreement: false },
+  { code: 'HTI', agreement: false },
+  { code: 'VAT', agreement: false },
+  { code: 'HND', agreement: false },
+  { code: 'HUN', agreement: true },
+  { code: 'ISL', agreement: true },
+  { code: 'IND', agreement: true },
+  { code: 'IDN', agreement: false },
+
+  { code: 'IRQ', agreement: false },
+  { code: 'IRL', agreement: true },
+  { code: 'ISR', agreement: true },
+  { code: 'ITA', agreement: true },
+  { code: 'JAM', agreement: true },
+  { code: 'JPN', agreement: true },
+  { code: 'JOR', agreement: false },
+  { code: 'KAZ', agreement: false },
+  { code: 'KEN', agreement: false },
+  { code: 'KIR', agreement: false },
+  { code: 'KWT', agreement: false },
+  { code: 'KGZ', agreement: false },
+
+  { code: 'LVA', agreement: true },
+  { code: 'LBN', agreement: false },
+  { code: 'LSO', agreement: false },
+  { code: 'LBR', agreement: false },
+  { code: 'LBY', agreement: false },
+  { code: 'LIE', agreement: false },
+  { code: 'LTU', agreement: true },
+  { code: 'LUX', agreement: true },
+  { code: 'MDG', agreement: false },
+  { code: 'MWI', agreement: false },
+  { code: 'MYS', agreement: false },
+  { code: 'MDV', agreement: false },
+  { code: 'MLI', agreement: false },
+  { code: 'MLT', agreement: true },
+  { code: 'MHL', agreement: false },
+  { code: 'MRT', agreement: false },
+  { code: 'MUS', agreement: false },
+  { code: 'MEX', agreement: true },
+
+  { code: 'MCO', agreement: false },
+  { code: 'MNG', agreement: false },
+  { code: 'MNE', agreement: false },
+  { code: 'MAR', agreement: true },
+  { code: 'MOZ', agreement: false },
+
+  { code: 'NAM', agreement: false },
+  { code: 'NRU', agreement: false },
+  { code: 'NPL', agreement: false },
+  { code: 'NLD', agreement: true },
+  { code: 'NZL', agreement: false },
+  { code: 'NIC', agreement: false },
+  { code: 'NER', agreement: false },
+  { code: 'NGA', agreement: false },
+
+  { code: 'MKD', agreement: false },
+  { code: 'NOR', agreement: true },
+  { code: 'OMN', agreement: false },
+  { code: 'PAK', agreement: false },
+  { code: 'PLW', agreement: false },
+
+  { code: 'PAN', agreement: false },
+  { code: 'PNG', agreement: false },
+  { code: 'PRY', agreement: false },
+  { code: 'PER', agreement: true },
+  { code: 'PHL', agreement: true },
+  { code: 'POL', agreement: true },
+  { code: 'PRT', agreement: true },
+  { code: 'QAT', agreement: false },
+  { code: 'ROU', agreement: true },
+
+  { code: 'RWA', agreement: false },
+  { code: 'KNA', agreement: true },
+  { code: 'LCA', agreement: true },
+  { code: 'VCT', agreement: true },
+  { code: 'WSM', agreement: false },
+  { code: 'SMR', agreement: false },
+  { code: 'STP', agreement: false },
+  { code: 'SAU', agreement: false },
+  { code: 'SEN', agreement: false },
+  { code: 'SRB', agreement: true },
+  { code: 'SYC', agreement: false },
+  { code: 'SLE', agreement: false },
+  { code: 'SGP', agreement: false },
+  { code: 'SVK', agreement: true },
+  { code: 'SVN', agreement: true },
+  { code: 'SLB', agreement: false },
+  { code: 'SOM', agreement: false },
+  { code: 'ZAF', agreement: false },
+
+  { code: 'SSD', agreement: false },
+  { code: 'ESP', agreement: true },
+  { code: 'LKA', agreement: false },
+  { code: 'SDN', agreement: false },
+  { code: 'SUR', agreement: false },
+  { code: 'SWE', agreement: true },
+  { code: 'CHE', agreement: true },
+
+  { code: 'TJK', agreement: false },
+
+  { code: 'THA', agreement: false },
+  { code: 'TLS', agreement: false },
+  { code: 'TGO', agreement: false },
+  { code: 'TON', agreement: false },
+  { code: 'TTO', agreement: true },
+  { code: 'TUN', agreement: false },
+  { code: 'TUR', agreement: true },
+  { code: 'TKM', agreement: false },
+  { code: 'TUV', agreement: false },
+  { code: 'UGA', agreement: false },
+  { code: 'UKR', agreement: false },
+  { code: 'ARE', agreement: false },
+
+  { code: 'USA', agreement: true },
+  { code: 'URY', agreement: true },
+  { code: 'UZB', agreement: false },
+  { code: 'VUT', agreement: false },
+
+  { code: 'YEM', agreement: false },
+  { code: 'ZMB', agreement: false },
+  { code: 'ZWE', agreement: false },
 ]
